New ESLint plugin

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "bloxy",
-  "version": "4.0.0-beta0",
+  "version": "4.0.0-beta1",
   "description": "A Node.JS library for interacting with the Roblox website and its API.",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test-with-coverage": "jest --coverage && cat ./coverage/lcov.info | codacy-coverage"
   },
   "types": "./typings/index.d.ts",
   "keywords": [
@@ -32,10 +33,12 @@
   "devDependencies": {
     "@types/node": "^12.7.5",
     "eslint": "^6.3.0",
+    "eslint-plugin-security": "^1.4.0",
     "jest": "^24.9.0"
   },
   "dependencies": {
     "@hapi/joi": "^16.1.2",
+    "codacy-coverage": "^3.4.0",
     "got": "^9.6.0",
     "node-cache": "^4.2.1",
     "signalr-client": "0.0.19"
