--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,10 @@
     "es6": true,
     "node": true
   },
-  "extends": "eslint:recommended",
+  "extends": [
+    "eslint:recommended",
+    "plugin:security/recommended"
+  ],
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
@@ -166,5 +169,8 @@
     "rest-spread-spacing": "error",
     "template-curly-spacing": "error",
     "yield-star-spacing": "error"
-  }
+  },
+  "plugins": [
+    "security"
+  ]
 }
