--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@hapi/joi": "^16.1.2",
     "got": "^9.6.0",
     "node-cache": "^4.2.1",
-    "signalr-client": "0.0.19"
+    "signalr-client": "0.0.19",
+    "tough-cookie": "^3.0.1"
   }
 }
