--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@hapi/joi": "^16.1.2",
     "got": "^9.6.0",
+    "lodash": "^4.17.15",
     "node-cache": "^4.2.1",
     "signalr-client": "0.0.19",
     "tough-cookie": "^3.0.1"
