--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@typescript-eslint/parser": "^2.28.0",
     "codacy-coverage": "^3.4.0",
     "eslint": "^6.8.0",
+    "eslint-plugin-scanjs-rules": "^0.2.1",
     "eslint-plugin-security": "^1.4.0",
     "fast-check": "^1.24.1",
     "jest": "^24.9.0",
