Added more internal stuff, set up utils (constants, errors, etc.), added structures. Also started on adding APIs and setting up types for them

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "types": [
+      "node"
+    ],
     /* Basic Options */
     // "incremental": true,
     /* Enable incremental compilation */
@@ -88,9 +91,7 @@
   "exclude": [
     "dist",
     "node_modules",
-    "oldSrc2",
-    ".circleci",
-    "old"
+    ".circleci"
   ],
   "include": [
     "src"
