Updated package.json to build after install

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test-with-coverage": "jest --coverage && cat ./coverage/lcov.info | codacy-coverage",
     "lint": "npm run lint",
     "build": "tsc --skipLibCheck",
-    "eslint": "eslint . --fix --ext .ts"
+    "eslint": "eslint . --fix --ext .ts",
+    "postinstall": "npm run build"
   },
   "types": "./dist/index.d.ts",
   "keywords": [
