--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "got": "^9.6.0",
     "lodash": "^4.17.19",
     "signalr-client": "0.0.19",
-    "tough-cookie": "^3.0.1"
+    "tough-cookie": "^3.0.1",
+    "tslib": "^2.0.0"
   }
 }
