--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ jobs:
             - run: npm install
             - run: npm run build
             - run: npm run test
+            - run: npm publish
 workflows:
   build-and-test:
     jobs:
