Prepared for automatic publishing to NPM

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/visualizememe/bloxy#pre-dev",
     "type": "github"
   },
-  "version": "5.0.0",
+  "version": "5.0.0-alpha",
   "description": "A Node.JS library for interacting with the Roblox website and its API.",
   "main": "./dist/index.js",
   "scripts": {
