--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/got": "^9.6.11",
     "@types/lodash": "^4.14.167",
     "@types/node": "^14.14.21",
+    "@types/websocket": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
     "codacy-coverage": "^3.4.0",
@@ -58,6 +59,7 @@
     "lodash": "^4.17.20",
     "signalr-client": "0.0.20",
     "tough-cookie": "^4.0.0",
-    "tslib": "^2.1.0"
+    "tslib": "^2.1.0",
+    "websocket": "^1.0.33"
   }
 }
