--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "faker": "^5.1.0",
     "fast-check": "^2.11.0",
     "jest": "^26.6.3",
+    "joi": "^17.3.0",
     "typedoc": "^0.20.14",
     "typedoc-plugin-markdown": "^3.4.0",
     "typedoc-plugin-markdown-pages": "^0.3.0",
