--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "author": "ScriptBased",
   "license": "MIT",
   "devDependencies": {
+    "@types/debug": "^4.1.5",
     "@types/got": "^9.6.11",
     "@types/lodash": "^4.14.167",
     "@types/node": "^14.14.21",
@@ -56,6 +57,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "debug": "^4.3.1",
     "got": "^11.8.1",
     "lodash": "^4.17.20",
     "signalr-client": "0.0.20",
