Updated LICENSE and README

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,9 @@ jobs:
             - run: npm install
             - run: npm run build
             - run: npm run test
+      - codecov/upload:
+          file: "./coverage/clover.xml"
+          token: bc55e615-594b-40a3-bf51-3e408a8e5f85
 workflows:
   build-and-test:
     jobs:
