--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "bloxy",
+  "private": false,
   "version": "5.1.4",
-  "description": "A Node.JS library for interacting with the Roblox website and its API.",
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "main": "./dist/index.js",
+  "description": "A Node.JS library for interacting with the Roblox website and its API.",
   "bugs": {
     "url": "https://github.com/visualizememe/bloxy/issues"
   },
   "repository": {
+    "directory": "https://github.com",
     "url": "https://github.com/visualizememe/bloxy#pre-dev",
     "type": "github"
   },
@@ -22,17 +27,14 @@
   },
   "types": "./dist/index.d.ts",
   "keywords": [
-    "bloxy",
-    "group",
-    "games",
-    "develop",
     "roblox",
-    "bloxy",
-    "nodejs roblox api",
     "roblox api",
+    "roblox group",
     "roblox groups",
-    "roblox module",
-    "typescript"
+    "bloxy",
+    "nodejs roblox",
+    "roblox nodejs",
+    "roblox module"
   ],
   "author": "ScriptBased",
   "license": "MIT",
