--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "bugs": {
     "url": "https://github.com/visualizememe/bloxy/issues"
   },
+  "files": [
+    "dist"
+  ],
   "repository": {
     "directory": "https://github.com",
     "url": "https://github.com/visualizememe/bloxy",
