--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "test": "jest",
     "test-with-coverage": "jest --coverage && cat ./coverage/lcov.info | codacy-coverage",
     "build": "tsc --skipLibCheck",
+    "package-check": "package-check",
     "eslint": "eslint . --fix --ext .ts",
     "postinstall": "echo \"\nThank you for installing bloxy! \n\nNOTE: THIS VERSION IS A DEVELOPMENT. \nPLEASE, USE VERSION 4.0.0-alpha3 FOR THE LATEST ''STABLE'' VERSION OF BLOXY.\"",
     "prepublishOnly": "npm run build",
