--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
   },
   "dependencies": {
     "debug": "^4.3.1",
-    "lodash": "^4.17.20",
     "signalr-client": "0.0.20",
     "tough-cookie": "^4.0.0",
     "tslib": "^2.1.0"
@@ -68,5 +67,8 @@
   "jest": {
     "collectCoverage": true,
     "coverageDirectory": "./coverage/"
+  },
+  "optionalDependencies": {
+    "got": "^11.8.1"
   }
 }
