--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/debug": "^4.1.5",
     "@types/lodash": "^4.14.167",
     "@types/node": "^14.14.21",
+    "@types/tough-cookie": "^4.0.0",
     "@types/websocket": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
