--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-security": "^1.4.0",
     "faker": "^5.1.0",
     "fast-check": "^2.11.0",
+    "got": "^11.8.1",
     "jest": "^26.6.3",
     "joi": "^17.3.0",
     "typedoc": "^0.20.14",
@@ -69,7 +70,5 @@
     "collectCoverage": true,
     "coverageDirectory": "./coverage/"
   },
-  "optionalDependencies": {
-    "got": "^11.8.1"
-  }
+  "optionalDependencies": {}
 }
