--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,12 +4,27 @@ orbs:
   codecov: codecov/codecov@1.0.2
   python: circleci/python@1.3.2
 jobs:
-  eslint:
+  build-and-test:
     executor:
       name: node/default
     steps:
       - checkout
       - node/with-cache:
+          steps:
+            - run: npm ci
+            - run: npm install jest --save-dev
+            - run: npm run build
+            - run: npm run test
+      - codecov/upload:
+          file: "./coverage/clover.xml"
+          token: bc55e615-594b-40a3-bf51-3e408a8e5f85
+  eslint:
+    executor: 
+      name: node/default
+    steps:
+      - checkout
+      - node/with-cache:
+          steps:
           - run: npm ci
           - run: eslint ./src --ext .ts
   build-typescript:
@@ -21,30 +36,19 @@ jobs:
           steps:
             - run: npm ci
             - run: npm run build
-  build-and-test:
-    executor:
-      name: node/default
-    steps:
-      - checkout
-      - node/with-cache:
-          steps:
-            - run: npm ci
-            - run: npm run build
-            - run: npm run test
-      - codecov/upload:
-          file: "./coverage/clover.xml"
-          token: bc55e615-594b-40a3-bf51-3e408a8e5f85
-  deploy-documentation:
+  deploy-docs:
     executor:
       name: python/default
     steps:
       - checkout
-      - python/default:
-          - run: pip install mkdocs mkdocs-material
+      - run: pip install mkdocs mkdocs-material
+      - node/with-cache:
+          steps:
+          - run: npm run create-docs
 workflows:
   build-and-test:
     jobs:
       - eslint
       - build-typescript
       - build-and-test
-      - deploy-documentation
+      - deploy-docs
