--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,8 +37,8 @@ jobs:
             - run: npm ci
             - run: npm run build
   deploy-docs:
-    executor:
-      name: ubuntu-2004:202010-01
+    machine:
+      image: ubuntu-1604:202004-01 ubuntu-2004:202010-01
     steps:
       - checkout
       - run: pip install mkdocs mkdocs-material
