--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,7 @@ jobs:
       - run: git clone https://github.com/Visualizememe/bloxy site
       - run: cd site && git checkout gh-pages
       - run: npm run create-docs
+      - run: cd site && git add . && git commit -m "Updates" && git push origin gh-pages
 workflows:
   build-and-test:
     jobs:
