Updated deploy docs command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
       - run: npm run create-docs
       - run: git config --global user.name "Martin"
       - run: git config --global user.email "m@xnx.no"
-      - run: cd site && git add . && git commit -m "Updates" && git push origin gh-pages
+      - run: cd site && git init && git remote add origin https://github.com/Visualizememe/bloxy && git add . && git commit -m "Updates" && git pull origin gh-pages && git push origin gh-pages
 workflows:
   build-and-test:
     jobs:
