--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
       - run: git config --global user.name "Martin"
       - run: git config --global user.email "m@xnx.no"
       - run: echo "bloxy.jsg.org" >> CNAME
-      - run: cd site && git add . && git commit -m "Updates" && git commit push origin gh-pages
+      - run: cd site && git init && git add . && git commit -m "Updates" && git pull origin gh-pages && git commit push origin gh-pages
 workflows:
   build-and-test:
     jobs:
