--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
       - run: npm run create-docs
       - run: git config --global user.name "Martin"
       - run: git config --global user.email "m@xnx.no"
-      - run: echo "bloxy.jsg.org" >> CNAME
+      - run: echo "bloxy.jsg.org" >> site/CNAME
       - run: cd site && git init && git add . && git commit -m "Updates" && git pull origin gh-pages && git push origin gh-pages
 workflows:
   build-and-test:
