--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "bloxy",
   "private": false,
-  "version": "5.7.1",
+  "version": "6.0.0-alpha",
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=16.0.0"
   },
   "main": "./dist/index.js",
   "description": "A Node.JS library for interacting with the Roblox website and its API.",
@@ -21,7 +21,6 @@
     "test-with-coverage": "jest --coverage && cat ./coverage/lcov.info | codacy-coverage",
     "build": "tsc --skipLibCheck",
     "eslint": "eslint . --ext .ts",
-    "postinstall": "npm install got && echo \"\nThank you for installing bloxy! Dependency 'got' has been installed automatically, uninstall it if you plan to use bloxy in a browser-related project!\"",
     "prepublishOnly": "npm run build",
     "create-docs": "typedoc --plugin typedoc-plugin-markdown --hideBreadcrumbs --namedAnchors --excludeExternals --out docs src && mkdocs build",
     "prepare-windows": "npm install && npm run build && npm run create-docs && echo 'Finished'"
@@ -37,25 +36,25 @@
     "roblox nodejs",
     "roblox module"
   ],
-  "author": "ScriptBased",
+  "author": "VisualizeMeme",
   "license": "MIT",
   "devDependencies": {
     "@types/debug": "^4.1.5",
     "@types/lodash": "^4.14.167",
-    "@types/node": "^14.14.31",
+    "@types/node": "^16.11.19",
     "@types/tough-cookie": "^4.0.0",
     "@types/websocket": "^1.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
-    "@typescript-eslint/parser": "^4.15.2",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "codacy-coverage": "^3.4.0",
-    "eslint": "^7.20.0",
+    "eslint": "^8.6.0",
     "eslint-plugin-security": "^1.4.0",
     "faker": "^5.1.0",
     "fast-check": "^2.13.0",
-    "got": "^11.8.1",
-    "jest": "^26.6.3",
+    "got": "^12.0.0",
+    "jest": "^27.4.7",
     "joi": "^17.3.0",
-    "typedoc": "^0.20.27",
+    "typedoc": "^0.22.10",
     "typedoc-plugin-markdown": "^3.5.0",
     "typedoc-plugin-markdown-pages": "^0.3.0",
     "typescript": "^4.1.3"
@@ -69,6 +68,5 @@
   "jest": {
     "collectCoverage": true,
     "coverageDirectory": "./coverage/"
-  },
-  "optionalDependencies": {}
+  }
 }
