--- a/package.json
+++ b/package.json
@@ -1,73 +1,79 @@
 {
-    "name": "bloxy",
-    "private": false,
-    "version": "6.0.0-alpha",
-    "engines": {
-        "node": ">=16.0.0"
-    },
-    "main": "./dist/index.js",
-    "description": "A Node.JS library for interacting with the Roblox website and its API.",
-    "bugs": {
-        "url": "https://github.com/visualizememe/bloxy/issues"
-    },
-    "repository": {
-        "directory": "https://github.com",
-        "url": "https://github.com/visualizememe/bloxy",
-        "type": "github"
-    },
-    "homepage": "https://bloxy.js.org/",
-    "scripts": {
-        "test": "jest",
-        "test-with-coverage": "jest --coverage && cat ./coverage/lcov.info | codacy-coverage",
-        "build": "tsc --skipLibCheck",
-        "eslint": "eslint . --ext .ts",
-        "prepublishOnly": "npm run build",
-        "create-docs": "typedoc --plugin typedoc-plugin-markdown --hideBreadcrumbs --namedAnchors --excludeExternals --out docs src && mkdocs build",
-        "prepare-windows": "npm install && npm run build && npm run create-docs && echo 'Finished'",
-        "postinstall": "npm install got && echo 'The package got has been installed. You can now use the bloxy package.'"
-    },
-    "types": "./dist/index.d.ts",
-    "keywords": [
-        "roblox",
-        "roblox api",
-        "roblox group",
-        "roblox groups",
-        "bloxy",
-        "nodejs roblox",
-        "roblox nodejs",
-        "roblox module"
-    ],
-    "author": "VisualizeMeme",
-    "license": "MIT",
-    "devDependencies": {
-        "@types/debug": "^4.1.5",
-        "@types/lodash": "^4.14.167",
-        "@types/node": "^16.11.19",
-        "@types/tough-cookie": "^4.0.0",
-        "@types/websocket": "^1.0.1",
-        "@typescript-eslint/eslint-plugin": "^5.9.0",
-        "@typescript-eslint/parser": "^5.9.0",
-        "codacy-coverage": "^3.4.0",
-        "eslint": "^8.6.0",
-        "eslint-plugin-security": "^1.4.0",
-        "faker": "^5.1.0",
-        "fast-check": "^2.13.0",
-        "jest": "^27.4.7",
-        "joi": "^17.3.0",
-        "typedoc": "^0.22.10",
-        "typedoc-plugin-markdown": "^3.5.0",
-        "typedoc-plugin-markdown-pages": "^0.3.0",
-        "typescript": "^4.1.3"
-    },
-    "dependencies": {
-        "debug": "^4.3.1",
-        "got": "^11.8.3",
-        "signalr-client": "0.0.20",
-        "tough-cookie": "^4.0.0",
-        "tslib": "^2.1.0"
-    },
-    "jest": {
-        "collectCoverage": true,
-        "coverageDirectory": "./coverage/"
-    }
+  "name": "bloxy",
+  "private": false,
+  "version": "6.0.0-alpha",
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "main": "./dist/index.js",
+  "description": "A Node.JS library for interacting with the Roblox website and its API.",
+  "bugs": {
+    "url": "https://github.com/visualizememe/bloxy/issues"
+  },
+  "repository": {
+    "directory": "https://github.com",
+    "url": "https://github.com/visualizememe/bloxy",
+    "type": "github"
+  },
+  "homepage": "https://bloxy.js.org/",
+  "scripts": {
+    "test": "nyc mocha --require ts-node/register tests/**/*.spec.ts",
+    "test-with-coverage": "nyc report --reporter=text-lcov | codacy-coverage",
+    "build": "tsc --skipLibCheck",
+    "eslint": "eslint . --ext .ts",
+    "prepublishOnly": "npm run build",
+    "create-docs": "typedoc --plugin typedoc-plugin-markdown --hideBreadcrumbs --namedAnchors --excludeExternals --out docs src && mkdocs build",
+    "prepare-windows": "npm install && npm run build && npm run create-docs && echo 'Finished'",
+    "postinstall": "npm install got && echo 'The package got has been installed. You can now use the bloxy package.'"
+  },
+  "types": "./dist/index.d.ts",
+  "keywords": [
+    "roblox",
+    "roblox api",
+    "roblox group",
+    "roblox groups",
+    "bloxy",
+    "nodejs roblox",
+    "roblox nodejs",
+    "roblox module"
+  ],
+  "author": "VisualizeMeme",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/chai": "^4.3.0",
+    "@types/debug": "^4.1.5",
+    "@types/lodash": "^4.14.167",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^16.11.19",
+    "@types/tough-cookie": "^4.0.0",
+    "@types/websocket": "^1.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
+    "chai": "^4.3.4",
+    "codacy-coverage": "^3.4.0",
+    "eslint": "^8.6.0",
+    "eslint-plugin-security": "^1.4.0",
+    "faker": "^5.1.0",
+    "fast-check": "^2.13.0",
+    "jest": "^27.4.7",
+    "joi": "^17.3.0",
+    "mocha": "^9.1.3",
+    "nyc": "^15.1.0",
+    "ts-node": "^10.4.0",
+    "typedoc": "^0.22.10",
+    "typedoc-plugin-markdown": "^3.5.0",
+    "typedoc-plugin-markdown-pages": "^0.3.0",
+    "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "debug": "^4.3.1",
+    "got": "^11.8.3",
+    "signalr-client": "0.0.20",
+    "tough-cookie": "^4.0.0",
+    "tslib": "^2.1.0"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "coverageDirectory": "./coverage/"
+  }
 }
