--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,7 @@
     "@typescript-eslint/no-var-requires": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/indent": ["error", 4],
+    "@typescript-eslint/indent": ["error", 2],
     "no-await-in-loop": "warn",
     "no-compare-neg-zero": "error",
     "no-template-curly-in-string": "error",
@@ -162,7 +162,7 @@
     "semi-spacing": "error",
     "space-before-blocks": "error",
     "space-before-function-paren": [
-      "error",
+      "off",
       {
         "anonymous": "always",
         "named": "always",
