--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -176,7 +176,7 @@
     "template-tag-spacing": "error",
     "unicode-bom": "error",
     "arrow-body-style": "error",
-    "arrow-parens": ["error", "as-needed"],
+    "arrow-parens": ["error", "always"],
     "arrow-spacing": "error",
     "no-duplicate-imports": "error",
     "no-useless-computed-key": "error",
