Update the first few APIs to a newer state

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,7 @@
     "@typescript-eslint/no-var-requires": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/indent": ["error", 2],
+    "@typescript-eslint/indent": "off",
     "no-await-in-loop": "warn",
     "no-compare-neg-zero": "error",
     "no-template-curly-in-string": "error",
@@ -56,7 +56,7 @@
     "no-useless-escape": "error",
     "no-useless-return": "error",
     "no-void": "error",
-    "no-warning-comments": "warn",
+    "no-warning-comments": "off",
     "prefer-promise-reject-errors": "error",
     "require-await": "warn",
     "yoda": "error",
