--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "tsc --skipLibCheck",
     "eslint": "eslint . --ext .ts",
     "prepublishOnly": "npm run build",
-    "create-docs": "typedoc --plugin typedoc-plugin-markdown --hideBreadcrumbs --namedAnchors --excludeExternals --out docs src && mkdocs build",
+    "create-docs": "typedoc src && mkdocs build",
     "prepare-windows": "npm install && npm run build && npm run create-docs && echo 'Finished'",
     "postinstall": "npm install got && echo 'The package got has been installed. You can now use the bloxy package.'"
   },
