--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bloxy",
   "private": false,
-  "version": "5.7.1",
+  "version": "5.8.0",
   "engines": {
     "node": ">=12.0.0"
   },
@@ -21,7 +21,6 @@
     "test-with-coverage": "jest --coverage && cat ./coverage/lcov.info | codacy-coverage",
     "build": "tsc --skipLibCheck",
     "eslint": "eslint . --ext .ts",
-    "postinstall": "npm install got && echo \"\nThank you for installing bloxy! Dependency 'got' has been installed automatically, uninstall it if you plan to use bloxy in a browser-related project!\"",
     "prepublishOnly": "npm run build",
     "create-docs": "typedoc --plugin typedoc-plugin-markdown --hideBreadcrumbs --namedAnchors --excludeExternals --out docs src && mkdocs build",
     "prepare-windows": "npm install && npm run build && npm run create-docs && echo 'Finished'"
@@ -40,31 +39,32 @@
   "author": "ScriptBased",
   "license": "MIT",
   "devDependencies": {
-    "@types/debug": "^4.1.5",
-    "@types/lodash": "^4.14.167",
-    "@types/node": "^14.14.31",
-    "@types/tough-cookie": "^4.0.0",
-    "@types/websocket": "^1.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
-    "@typescript-eslint/parser": "^4.15.2",
+    "@types/debug": "^4.1.8",
+    "@types/lodash": "^4.14.195",
+    "@types/node": "^20.4.2",
+    "@types/tough-cookie": "^4.0.2",
+    "@types/websocket": "^1.0.5",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "codacy-coverage": "^3.4.0",
-    "eslint": "^7.20.0",
-    "eslint-plugin-security": "^1.4.0",
-    "faker": "^5.1.0",
-    "fast-check": "^2.13.0",
-    "got": "^11.8.1",
-    "jest": "^26.6.3",
-    "joi": "^17.3.0",
-    "typedoc": "^0.20.27",
-    "typedoc-plugin-markdown": "^3.5.0",
+    "eslint": "^8.45.0",
+    "eslint-plugin-security": "^1.7.1",
+    "faker": "^6.6.6",
+    "fast-check": "^3.11.0",
+    "got": "^13.0.0",
+    "jest": "^29.6.1",
+    "joi": "^17.9.2",
+    "typedoc": "^0.24.8",
+    "typedoc-plugin-markdown": "^3.15.3",
     "typedoc-plugin-markdown-pages": "^0.3.0",
-    "typescript": "^4.1.3"
+    "typescript": "^5.1.6",
+    "yarn-upgrade-all": "^0.7.2"
   },
   "dependencies": {
-    "debug": "^4.3.1",
-    "signalr-client": "0.0.20",
-    "tough-cookie": "^4.0.0",
-    "tslib": "^2.1.0"
+    "debug": "^4.3.4",
+    "signalr-client": "^0.0.20",
+    "tough-cookie": "^4.1.3",
+    "tslib": "^2.6.0"
   },
   "jest": {
     "collectCoverage": true,
